# pykitchen

./: .gitignore  AGENTS.md  README.md  meta.code-workspace  metak.py  pyproject.toml
metak-orchestrator/: AGENTS.md
metakitchen/: README.md  configuration.md  file-structure.md  tips.md  usage.md
orchestrator/: AGENTS.md
orchestrator/.claude/: CLAUDE.md
