[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "metakitchen"
version = "0.1.0"
description = "Scaffold and manage multi-repo AI agent workspaces"
readme = "metakitchen/README.md"
requires-python = ">=3.7"
license = "MIT"

[project.scripts]
metak = "metak:main"

[tool.setuptools]
py-modules = ["metak"]
